--- a/styles/resume.hbs
+++ b/styles/resume.hbs
@@ -69,7 +69,7 @@
 			<div class="jobBlock">
 	      <div class='blockHeader'>
 	        <span class='title'>
-	          {{#if name}}{{name}}{{/if}}{{#if position}} - {{position}}{{/if}}
+	          {{#if name}}<a href='{{website}}'>{{name}}</a>{{/if}}{{#if position}} - {{position}}{{/if}}
 	        </span>
 	        {{#if startDate}}
 	        <span class='date'>
@@ -77,7 +77,10 @@
 	        </span>
 	        {{/if}}
 	      </div>
-	      <div><a href='{{website}}'>{{website}}</a></div>
+	      {{!-- <div><a href='{{website}}'>{{website}}</a></div> --}}
+        {{#if summary}}
+        <div>{{summary}}</div>
+        {{/if}}
 	      {{#if highlights.length}}
 	      <ul class='highlights'>
 	        {{#each highlights}}
