--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,16 +1,100 @@
-// body {
-//   background: #EEEEEE;
-//   font: 12px "Times New Roman", Times, sans-serif;
-//   line-height: 1.4;
-//   margin: 40px 0;
-// }
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-// #resume {
-//   margin: 0 auto;
-//   max-width: 600px;
-//   padding: 80px 100px;
-//   background: #fff;
-//   border: 1px solid #ccc;
-//   box-shadow: 2px 2px 4px #aaa;
-//   -webkit-box-shadow: 2px 2px 4px #aaa;
-// }
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+
+/*
+  3. Allow percentage-based heights in the application
+*/
+html,
+body {
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/*
+  6. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/*
+  7. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/*
+  8. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+// https://www.joshwcomeau.com/css/custom-css-reset/
+
+
+// https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
+/* Style all font awesome icons */
+.fa, .far, .fas {
+  vertical-align: middle;
+  padding: 0.5em;
+  margin: auto;
+  font-size: 0.5em;
+  width: 2.5em;
+  text-align: center;
+  text-decoration: none;
+  background: black;
+  color: white;
+}
+
+/* Add a hover effect if you want */
+.fa:hover, .far:hover, .fas:hover {
+  opacity: 0.7;
+}
