Fixed the styling a bit

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -81,19 +81,19 @@ h6 {
 
 // https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 /* Style all font awesome icons */
-.fa,
-.far,
-.fas {
-  vertical-align: middle;
-  padding: 0.5em;
-  margin: auto;
-  font-size: 0.5em;
-  width: 2em;
-  text-align: center;
-  text-decoration: none;
-  background: black;
-  color: white;
-}
+// .fa,
+// .far,
+// .fas {
+//   vertical-align: middle;
+//   padding: 0.5em;
+//   margin: auto;
+//   font-size: 0.5em;
+//   width: 2em;
+//   text-align: center;
+//   text-decoration: none;
+//   background: black;
+//   color: white;
+// }
 
 /* Add a hover effect if you want */
 .fa:hover,
