--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -37,14 +37,10 @@ $headerFont: Roboto;
 $bodyFont: Source Sans Pro;
 // sizes
 $h1: 2.68em;
-$h2: 1.8em;
-$h3: 1.1em;
-$h4: 0.75em;
-$xxl: 1.5em;
-$xl: 1.2em;
-$lg: 1.1em;
-$md: 1em;
-$sm: 0.875em;
+$xl: 1.5em;
+$lg: 1.05em;
+$md: 0.95em;
+$sm: 0.87em;
 $xs: 0.8em;
 
 // font-colors
@@ -53,7 +49,7 @@ $text: $darkgray;
 $gray-text: $gray;
 $light-text: $lightgray;
 $title: $text; // might not need rest
-$default: $text;
+$default: 0.87em ;//$text;
 
 // @mixin h1 {
 //   font-family: $headerFont;
@@ -84,31 +80,19 @@ $default: $text;
 .resume {
   font-family: $bodyFont;
   font-weight: normal;
+  font-size: $default;
   color: $default;
-  line-height: 1.1;
+  line-height: 1.2;
 
   header {
     text-align: center;
-    line-height: 1.5;
-    // span[class="contact-details"] {
-    //   vertical-align: middle;
-    //   padding: 0.5em;
-    //   margin: auto;
-    //   justify-content: center;
-    //   align-content: center;
-    //   color: $text;
-    // }
-    // span[class="contact"] {
-    //   vertical-align: middle;
-    //   padding: 0.25em;
-    //   // margin: 0 0.25em;
-    //   font-size: $md;
-    //   color: $text;
-    // }
+    // line-height: 1.3;
   }
-  // section {
-  //   padding: 0.25em 0;
-  // }
+  section {
+    p {
+      font-size: $xs;
+    }
+  }
 }
 
 .title {
@@ -128,13 +112,13 @@ $default: $text;
 
 .position {
   font-family: $bodyFont;
-  font-size: $md;
+  font-size: $xs;
 }
 
 .location {
   font-family: $bodyFont;
   color: $light-text;
-  font-size: $md;
+  font-size: $sm;
 }
 
 .contact {
@@ -143,7 +127,7 @@ $default: $text;
   padding: 0 0.5em 0.5em 0;
   span {
     vertical-align: middle;
-    padding: 0.4em;
+    padding: 0.1em;
     margin: auto;
   }
   a, i {
@@ -165,15 +149,16 @@ $default: $text;
 }
 
 .summary {
-  padding: 0.5em 0;
+  line-height: 1.2;
   text-align: left;
+  font-size: $default;
 }
 
 
 .section-title {
   line-height: 1.5;
   font-family: $headerFont;
-  font-size: $xxl;
+  font-size: $xl;
   font-weight: bold;
   color: $title;
   overflow: hidden;
@@ -188,7 +173,6 @@ $default: $text;
   vertical-align: left;
   width: 100%;
 }
-
 .section-title:after {
   background-color: $title;
   left: 0;
@@ -201,22 +185,22 @@ $default: $text;
   line-height: 1.5;
   font-weight: 500;
   font-family: $headerFont;
-  font-size: $xl;
+  font-size: $lg;
   color: $text;
   span,
   p {
     font-weight: normal;
     color: $gray-text;
+    font-size: $xs;
   }
 }
 
 .section-heading-2 {
-  text-transform: uppercase;
-  line-height: 1.5;
-  font-weight: 300;
+  // text-transform: uppercase;
+  font-weight: normal;
   font-family: $headerFont;
-  font-size: $xs;
-  color: $text;
+  font-size: $sm;
+  color: $light-text;
   span,
   p {
     font-weight: normal;
@@ -229,19 +213,19 @@ $default: $text;
   padding-top: 0.1em;
 }
 
-$meta-padding: $xxl - $sm;
 .left-meta {
+  line-height: 1.5;
   position: relative;
   font-style: italic;
   vertical-align: center;
-  padding-top: $meta-padding;
   float: right;
   font-size: $sm;
   text-align: right;
 }
 
 .list {
-  font-size: $md;
+  padding: 0.25em 1em;
+  font-size: $sm;
   list-style-type: square;
 }
 
