--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,6 +12,7 @@
 */
 * {
   margin: 0;
+  padding: 0;
 }
 
 /*
@@ -21,8 +22,6 @@ html,
 body {
   height: 100%;
   width: 100%;
-  min-height: 100vh;
-  min-width: 100vw;
 }
 
 /*
@@ -79,29 +78,7 @@ h6 {
 }
 // https://www.joshwcomeau.com/css/custom-css-reset/
 
-
-// a4 properties
-$A4_actual_height: 297mm;
-$A4_height: 100%;
-$A4_width: 210mm;
-
-@media print {
-  // this needs to be hyper fined tuned for correct printing
-  @page {
-    size: $A4_width $A4_actual_height;
-  }
-  
-  .A4 {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 0 auto;
-    padding: 0;
-    // line-height: 18px;
-  }
-  .resume-page {
-    padding: 0;
-  }
+@page {
+  size: A4;
+  margin: 0 0;
 }
