--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -36,7 +36,7 @@ $A4_width: 210mm;
 $headerFont: Roboto;
 $bodyFont: Source Sans Pro;
 // sizes
-$h1: 2.68em;
+$default: 0.87em;
 $xl: 1.5em;
 $lg: 1.05em;
 $md: 0.95em;
@@ -49,55 +49,77 @@ $text: $darkgray;
 $gray-text: $gray;
 $light-text: $lightgray;
 $title: $text; // might not need rest
-$default: 0.87em ;//$text;
 
-// @mixin h1 {
-//   font-family: $headerFont;
-//   font-size: $h1;
-//   color: $title;
-// }
-
-.A4 {
-  margin: 0 auto;
-  box-sizing: border-box;
-  padding: 7.62mm;
-  width: $A4_width;
-  //height: 297mm;
-  height: $A4_height;
-  background: white;
-  box-shadow: $shadow;
-  -webkit-box-shadow: $shadow;
+@mixin a4_dimensions {
+  width: 210mm;
+  height: 100%;
+}
+@mixin print_dimensions {
+  width: 210mm;
+  height: 297mm;
 }
 
 .resume-page {
-  padding-top: 5rem;
-  font-size: $md;
+  padding: 5em 0;
   background: $whitesmoke;
   min-height: 100vh;
-  min-width: 100vw;
+  @media print {
+    @page {
+      size: A4;
+      margin: 0;
+    }
+    html, body {
+        @include print_dimensions;    
+    }
+    background: transparent;
+  }
+}
+
+.A4 {
+  @include a4_dimensions;
+  margin: 0 auto;
+  // box-sizing: border-box;
+  padding: 12.7mm 25.4mm;
+  line-height: 1.5;
+  background: white;
+  box-shadow: $shadow;
+  -webkit-box-shadow: $shadow;
+  
+  @media print {
+    // this needs to be hyper fined tuned for correct printing
+    @page {
+      size: A4;
+      margin: 0;
+    }
+    html, body {
+        @include print_dimensions;      
+    }
+    box-shadow: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    -webkit-box-shadow: none;
+  }
 }
 
 .resume {
+  // padding: 25.4mm; //7.62mm;
+  margin: 0;
+  padding: 0;
   font-family: $bodyFont;
   font-weight: normal;
   font-size: $default;
   color: $default;
-  line-height: 1.2;
-
   header {
     text-align: center;
-    // line-height: 1.3;
   }
-  section {
-    p {
-      font-size: $xs;
-    }
+  ul {
+  padding-left: 2em;
   }
 }
 
 .title {
   font-family: $headerFont;
-  font-size: $h1;
+  font-size: 2.68em;
   color: $title;
 }
 
@@ -124,39 +146,22 @@ $default: 0.87em ;//$text;
 .contact {
   vertical-align: middle;
   font-size: $md;
-  padding: 0 0.5em 0.5em 0;
+  padding-bottom: 0.5em;
   span {
     vertical-align: middle;
     padding: 0.1em;
     margin: auto;
   }
-  a, i {
-    vertical-align: middle;
-    padding: 0.5em;
-    margin: auto;
-    font-size: 0.6em;
-    width: 2.25em;
-    min-width: 2em;
-    min-height: 2em;
-    text-align: center;
-    text-decoration: none;
-    background: black;
-    color: white;
-  }
-  a:hover, i:hover {
-  opacity: 0.7;
-}
 }
 
 .summary {
-  line-height: 1.2;
+  // line-height: 1.2;
   text-align: left;
   font-size: $default;
 }
 
-
 .section-title {
-  line-height: 1.5;
+  // line-height: 1.5;
   font-family: $headerFont;
   font-size: $xl;
   font-weight: bold;
@@ -182,7 +187,7 @@ $default: 0.87em ;//$text;
 
 .section-heading-1 {
   display: inline;
-  line-height: 1.5;
+  // line-height: 1.5;
   font-weight: 500;
   font-family: $headerFont;
   font-size: $lg;
@@ -214,7 +219,7 @@ $default: 0.87em ;//$text;
 }
 
 .left-meta {
-  line-height: 1.5;
+  // line-height: 1.5;
   position: relative;
   font-style: italic;
   vertical-align: center;
@@ -236,5 +241,26 @@ $default: 0.87em ;//$text;
 
 .plain-link {
   text-decoration: none;
-  color: $text
+  color: $text;
+}
+
+.icon {
+  vertical-align: middle;
+  padding: 0.5em;
+  margin: auto;
+  font-size: 0.6em;
+  width: 2.25em;
+  min-width: 2em;
+  min-height: 2em;
+  text-align: center;
+  text-decoration: none;
+  background: black;
+  color: white;
+}
+.icon:hover {
+  opacity: 0.7;
+}
+
+.hide {
+  display: none;
 }
