--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -68,8 +68,9 @@ $title: $text; // might not need rest
       size: A4;
       margin: 0;
     }
-    html, body {
-        @include print_dimensions;    
+    html,
+    body {
+      @include print_dimensions;
     }
     padding: 0;
     background: transparent;
@@ -85,6 +86,7 @@ $title: $text; // might not need rest
   background: white;
   box-shadow: $shadow;
   -webkit-box-shadow: $shadow;
+  animation: fadeIn 2.0s ease forwards;
   // h2 {
   //   line-height: 1.5;
   // }
@@ -94,14 +96,60 @@ $title: $text; // might not need rest
       size: A4;
       margin: none;
     }
-    html, body {
-        @include print_dimensions;      
+    html,
+    body {
+      @include print_dimensions;
     }
     font-size: 12pt;
     line-height: 1.2;
     // padding: 0 25.4mm;
+    animation: none;
     box-shadow: none;
     -webkit-box-shadow: none;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-moz-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-o-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @-ms-keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 }
 
@@ -116,9 +164,14 @@ $title: $text; // might not need rest
     text-align: center;
   }
   ul {
-  padding-left: 2em;
+    padding-left: 2em;
   }
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     color: $text;
   }
 }
@@ -174,7 +227,7 @@ $title: $text; // might not need rest
   color: $title;
   overflow: hidden;
   text-align: left;
-    @media print {
+  @media print {
     // this needs to be hyper fined tuned for correct printing
     line-height: 1.5;
   }
@@ -207,7 +260,6 @@ $title: $text; // might not need rest
     font-weight: normal;
     color: $gray-text;
     font-size: $xs;
-    
   }
 }
 
