--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -194,11 +194,11 @@ $bodyFont: Verdana, monospace;
 
 .keywords {
   font-size: 0.9em;
-  color: var(--c1);
-  background-color: var(--c4);
-  border: solid 2px red;
-  border-radius: 4px;
-  padding: 0 10px;
+  // color: var(--c1);
+  // background-color: var(--c4);
+  // border: solid 2px red;
+  // border-radius: 4px;
+  // padding: 0 10px;
 }
 
 .plain-link {
