--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -18,16 +18,19 @@ $bodyFont: Verdana, monospace;
   color: var(--fg);
   position: relative;
   margin: 4em 0;
-  background: var(--bg);
+  background: white;
   // display: grid;
   // justify-content: center;
   // align-content: center;
   height: max-content;
+  // box-shadow:  1em 1em 1em 1em rgba(90, 90, 90, 0.384);
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 
   @media print {
     @page {
       size: A4;
       margin: 0;
+      padding: 0;
     }
 
     html,
@@ -45,7 +48,7 @@ $bodyFont: Verdana, monospace;
 
 .A4 {
   @include a4_dimensions;
-  margin: 0 auto;
+  margin: 0;
   padding: 1em 3em;
 
   @media print {
@@ -83,17 +86,17 @@ $bodyFont: Verdana, monospace;
 .title {
   font-family: $headerFont;
   font-size: 2.68em;
-  color: var(--fg);
+  // color: var(--fg);
 }
 
 .first-name {
   font-weight: 100;
-  color: var(--fg);
+  // color: var(--fg);
 }
 
 .last-name {
   font-weight: 900;
-  color: var(--fg);
+  // color: var(--fg);
 }
 
 .position {
@@ -103,7 +106,7 @@ $bodyFont: Verdana, monospace;
 
 .location {
   font-family: $bodyFont;
-  color: var(--c7);
+  // color: var(--c7);
   font-size: 0.8em;
 }
 
@@ -125,7 +128,7 @@ $bodyFont: Verdana, monospace;
   font-family: $headerFont;
   font-size: 1.5em;
   font-weight: bold;
-  color: var(--fg);
+  // color: var(--fg);
   overflow: hidden;
   text-align: left;
 
@@ -155,12 +158,12 @@ $bodyFont: Verdana, monospace;
   font-weight: 500;
   font-family: $headerFont;
   font-size: 1em;
-  color: var(--fg);
+  // color: var(--fg);
 
   span,
   p {
     font-weight: normal;
-    color: var(--c5);
+    // color: var(--c5);
     font-size: 0.7em;
   }
 }
@@ -169,7 +172,7 @@ $bodyFont: Verdana, monospace;
   font-weight: normal;
   font-family: $headerFont;
   font-size: 0.8em;
-  color: var(--c6);
+  // color: var(--c6);
 
   span,
   p {
@@ -203,7 +206,7 @@ $bodyFont: Verdana, monospace;
 
 .plain-link {
   text-decoration: none;
-  color: var(--c4);
+  // color: var(--c4);
 }
 
 .icon {
@@ -219,7 +222,7 @@ $bodyFont: Verdana, monospace;
 
   @media print {
     font-size: 0.75em;
-    // color: black;
+    color: black;
     animation: none;
     box-shadow: none;
     width: 2em;
