Default commit message

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,18 @@
+:root {
+  --c0: #220055;
+  --c1: #CC3377;
+  --c2: #55CC44;
+  --c3: #DDAA33;
+  --c4: #1177DD;
+  --c5: #6611FF;
+  --c6: #44DDBB;
+  --c7: #331177;
+  --xg: #EE22FF;
+  --oo: #44228866;
+  --fg: var(--c6);
+  --bg: var(--c7);
+}
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
